fixed a glitch with the scrollbars

--- a/client/css/03_iconsView.css
+++ b/client/css/03_iconsView.css
@@ -1,4 +1,8 @@
-#iconsView {display: none;}
+#iconsView {
+    height: calc(100vh - 50px);
+    display: none;
+    overflow-y: scroll;
+}
 
 #iconsView > div.wrapper {
     display: flex;
